# Pursuit

./: API_CONTRACT.md  LICENSE  README.md  render.yaml
.github/workflows/: daily_ping.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 20260622_a1b2c3d4e5f6_initial_schema.py  20260622_b2c3d4e5f6a1_multi_schedule.py  20260623_c3d4e5f6a1b2_days_of_week.py  20260706_d4e5f6a1b2c3_add_user_name.py  20260710_e5f6a1b2c3d4_conversations.py  20260712_a2b3c4d5e6f7_webhook_dedup.py  20260712_b3c4d5e6f7a8_schedule_duration.py  20260712_c4d5e6f7a8b9_schedule_status.py  20260712_d5e6f7a8b9c0_notification_sent_dates.py  20260712_f6a1b2c3d4e5_user_reminder_times.py
backend/migrations/: 001_initial_schema.sql  002_multi_schedule.sql
backend/src/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/src/core/: __init__.py  exceptions.py  security.py
backend/src/routers/: auth.py  cron.py  health.py  leaves.py  logs.py  rewards.py  schedules.py  users.py  webhook.py
backend/src/schemas/: auth.py  log.py  reward.py  schedule.py  user.py
backend/src/services/: __init__.py  ai_agent.py  bot_personality.py  conversation.py  gamification.py  otp.py  scheduler.py  whatsapp.py
backend/tests/: conftest.py  test_auth.py  test_cron.py  test_gamification.py  test_webhook.py
